opps  try again

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,7 +71,7 @@
     
     
      <div class="generic-container" >
-    	<ng-view></ng-view>
+    	<ng-view=""></ng-view>
      </div>
         
     </body>
